--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <div class="container">
       <div class="product_heading">
         <h2>
-          Feature Watches
+          Featured Watches
         </h2>
       </div>
       <div class="product_container">
