--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
     <div class="container">
       <div class="product_heading">
         <h2>
-          New Arrivals
+          On Demand
         </h2>
       </div>
       <div class="product_container">
@@ -896,7 +896,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                static@gmail.com
               </p>
             </div>
           </div>
